CSSスタティックモジュール .aural を追加。

--- a/htdocs/_docs/modules/statics/index.html
+++ b/htdocs/_docs/modules/statics/index.html
@@ -83,6 +83,33 @@
 </div><!-- /.unit -->
 
 
+<h2>メディアタイプ別パーツ出し分け</h2>
+
+<div class="unit">
+<table class="def" style="width:100%;">
+	<thead>
+		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>.aural</th>
+			<td>読み上げブラウザ対応のための隠しナビゲーションを表現します。視覚メディアには表示されませんが、音声読み上げブラウザには読み上げられます。</td>
+			<td>
+				&lt;div class=&quot;aural&quot;&gt;&lt;a href=&quot;#content&quot;&gt;本文へ&lt;/a&gt;&lt;/div&gt;<br />
+				<br />
+				&lt;div class=&quot;breadcrumb&quot;&gt;<br />
+					&lt;span class=&quot;aural&quot;&gt;現在のページ:&lt;/span&gt;<br />
+					&lt;ul&gt;<br />
+						&lt;li&gt;&lt;a href=&quot;/&quot;&gt;ホーム&lt;/a&gt;&lt;/li&gt;<br />
+						&lt;li&gt;&amp;gt; ページA&lt;/li&gt;<br />
+					&lt;/ul&gt;<br />
+				&lt;/div&gt;<br />
+			</td>
+		</tr>
+	</tbody>
+</table>
+</div><!-- /.unit -->
+
 
 <h2>その他</h2>
 
