--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -1,25 +1,13 @@
 
+<p>
+	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、Pickles Framework が規定する標準のコーディング規則について説明します。<br />
+</p>
+
 <?php
 	print( $px->theme()->autoindex() );
 ?>
 
-<h2>概要</h2>
-
-<p>
-	このドキュメントは、Pickles Framework が提唱する標準のコーディング規則です。コンテンツを構成するモジュールの定義を含みます。<br />
-</p>
-<p>
-	モジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
-</p>
-<p>
-	ここで定義されるモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
-</p>
-<p>
-	コンテンツ制作者は、ここに定義されていないモジュールを独自に開発することができます(独自モジュール設計規則については<a href="./contents_custom.html">コンテンツ独自モジュールの定義</a>を参照)が、これは通常推奨されません。独自モジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたモジュールのみを使ってコンテンツを構築するようにしてください。<br />
-</p>
-
-
-<h3>コーディング規則の設計方針</h3>
+<h2>コーディング規則の設計方針</h2>
 <p>
 	コーディング規則は、次の方針に基づいて設計します。<br />
 </p>
@@ -30,15 +18,26 @@
 </ul>
 
 
-<h3>ターゲットデバイスについての考え方</h3>
+<h2>ターゲットデバイスについての考え方</h2>
 
 <p>
 	ターゲットデバイスの種類については、意識しない(=<strong>マルチデバイスに対応できるように設計する</strong>)ものとします。<br />
 </p>
 
-<h2>共通モジュール</h2>
+<h2>共通ドキュメントモジュール</h2>
 
-<p>共通モジュールは、それぞれ<strong>スタティックモジュール</strong>、<strong>パーツモジュール</strong>、<strong>ユニットモジュール</strong>の3種類のグループに分類されます。</p>
+<p>
+	ドキュメントモジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
+</p>
+<p>
+	ここで定義されるドキュメントモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
+</p>
+<p>
+	コンテンツ制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
+</p>
+
+
+<p>共通ドキュメントモジュールは、それぞれ<strong>スタティックモジュール</strong>、<strong>パーツモジュール</strong>、<strong>ユニットモジュール</strong>の3種類のグループに分類されます。</p>
 
 <dl>
 	<dt><a href="./statics/">スタティックモジュール</a></dt>
@@ -121,11 +120,94 @@
 	<li>頻繁に使うクラスでも、構造が複雑なモジュールには、フルスペルの名称が適しています。これは、モジュール集からコピー＆ペーストしてコーディングする運用が想定されるため、タイピングのコストやミスタイプのリスクが低いと考えられるためです。</li>
 </ul>
 
-<h2 id="cont_contents_css">コンテンツ独自モジュールを定義する場合の規則</h2>
+<h2 id="cont_contents_custom_modules">コンテンツ独自モジュールを定義する場合の規則</h2>
 
 <p>
-	Pickles Frameworkでは、サイト全体(テーマ)で一元的に管理されているモジュールと干渉しあわないように、いくつかの規則が用意されています。<br />
-	詳しくは、<a href="./contents_custom.html">コンテンツコーディング規則</a> のページを参照してください。<br />
+	Pickles Framework では、サイト全体(テーマ)で一元的に管理されているモジュールと干渉しあわないように、いくつかの規則が用意されています。<br />
+	コンテンツ独自のCSS、JavaScriptを定義する場合の規則 についても含みます。<br />
 </p>
+
+<h3>独自ファイル格納ディレクトリ</h3>
+
+<p>
+	コンテンツファイルと同じ階層に、コンテンツファイルと同じ名前の拡張子を .files に変えた名前のディレクトリが、コンテンツ独自のファイル格納場所です。<br />
+	例えば、<code>/abc/def/fhi.html</code> というコンテンツの場合、<code>/abc/def/fhi.files/*</code> を独占的に使うことができます。<br />
+</p>
+
+<p>
+	外部CSS、画像などのリソースファイルはこの中に管理するようにしてください。また、このディレクトリ内での格納規則や命名規則は設けません。<br />
+</p>
+
+<h3>コンテンツ独自CSSを定義する</h3>
+<p>
+	コンテンツが独自に定義するCSSは、サイト全体(テーマ)で一元的に管理されているCSSと干渉し合っては不都合があります。この問題を避けるため、次の規則が設けられました。<br />
+</p>
+<ul>
+	<li>コンテンツは、<code>&lt;div class=&quot;contents&quot;&gt;&lt;/div&gt;</code> の内側に設置される約束なので、コンテンツが独自に定義するCSSクラスは、.contents 以下にのみ効果があるように記述しなければならない。</li>
+	<li>コンテンツが独自に定義するCSSクラスには、接頭辞 cont を付加しなければならない。</li>
+	<li>テーマが提供するCSSモジュールの一部を改変して使うことはできない。ただし、テーマが明示的に許可している場合は、その範囲で改変することができる。</li>
+</ul>
+
+
+
+<h3>コンテンツ独自JavaScriptを定義する</h3>
+
+<p>
+	コンテンツは独自にJavaSctiptを記述し、埋め込むことができます。<br />
+	ただし、次の規則に従うようにしてください。<br />
+</p>
+<ul>
+	<li>ローカルなJavaScriptメソッドには、接頭辞contを付加する。</li>
+	<li>コンテンツのHTMLソースは<code>&lt;div class=&quot;contents&quot;&gt;&lt;/div&gt;</code>に内包される規則のため、それ以外のDOMエレメントを改変するようなスクリプトを記述してはならない。</li>
+	<li>コンテンツが独自に定義したエレメントのid属性は、接頭辞contを付加する。</li>
+</ul>
+
+<h3>JavaScriptライブラリの利用</h3>
+<h4>テーマがロードするJavaScriptライブラリ</h4>
+<p>
+	以下のライブラリは、テーマにより標準的にロードするため、コンテンツが明示的にロードする必要はありません。<br />
+</p>
+<ul>
+	<li>jQuery</li>
+</ul>
+
+<h4>コンテンツによって必要な場合にロードできる共有ライブラリ</h4>
+<p>
+	以下のライブラリは、共有リソースとしてテーマによって用意されているが、特にコンテンツが必要としない限り、ロードはされません。<br />
+</p>
+<ul>
+	<li>(未定義)</li>
+</ul>
+
+
+<h3>&lt;head&gt;領域にJavaScriptやCSSを書くには</h3>
+
+<p>
+	<code>$px-&gt;theme()-&gt;send_content()</code> を通じて、コンテンツキャビネット <code>head</code> にソースを送ります。<br />
+</p>
+
+<div class="unit">
+	<div class="code"><pre><code>&lt;?php ob_start(); ?&gt;
+&lt;!-- このソースは、テーマのキャビネット &quot;head&quot; に送られます。 --&gt;
+&lt;style type=&quot;text/css&quot;&gt;
+	/*
+		コンテンツ独自のローカルCSSはここに実装します。
+	*/
+&lt;/style&gt;
+&lt;!--
+または、次のように、外部のCSSを読み込むこともできます。
+---
+&lt;link rel=&quot;stylesheet&quot; href=&quot;./index.files/contents.css&quot; type=&quot;text/css&quot; /&gt;
+--&gt;
+&lt;?php $px-&gt;theme()-&gt;send_content( ob_get_clean(), 'head' ); ?&gt;</code></pre></div>
+</div><!-- /.unit -->
+
+
+
+<h3>その他、禁止事項</h3>
+
+<ul>
+	<li>テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマ管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。</li>
+</ul>
 
 
