コーディング規則の文言を調整。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -1,6 +1,6 @@
 
 <p>
-	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、Pickles Framework が規定する標準のコーディング規則について説明します。<br />
+	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、フレームワークが規定する標準のコーディング規則について説明します。<br />
 </p>
 
 <?php
@@ -45,7 +45,7 @@
 	<dt><a href="./parts/">パーツモジュール</a></dt>
 		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
 	<dt><a href="./units/">ユニットモジュール</a></dt>
-		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられた概念です。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
+		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられたモジュールです。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
 </dl>
 
 
@@ -64,7 +64,7 @@
 
 <h2>命名規則</h2>
 
-<p>Pickles Framework では次の命名規則を原則としています。</p>
+<p>次の命名規則を原則とします。</p>
 
 <?php ob_start(); ?>
 <style type="text/css">
@@ -112,7 +112,7 @@
 
 <h3>名称の省略について</h3>
 <p>
-	クラス名等の命名に省略形を使用するべきかどうかについて、Pickles Framework では厳密な取り決めは設けませんが、次のような基準を設け、適切な名称を検討するようにします。<br />
+	クラス名等の命名に省略形を使用するべきかどうかについて、厳密な取り決めは設けませんが、次のような基準を設け、適切な名称を検討するようにします。<br />
 </p>
 <ul>
 	<li>名称は省略せず、フルスペルで命名することを基本とします。これは、フレームワークに慣れない新しいメンバーでも、ソースコードを見るだけである程度の意味や効果を把握できるように配慮するためです。</li>
@@ -123,7 +123,7 @@
 <h2 id="cont_contents_custom_modules">コンテンツ独自モジュールを定義する場合の規則</h2>
 
 <p>
-	Pickles Framework では、サイト全体(テーマ)で一元的に管理されているモジュールと干渉しあわないように、いくつかの規則が用意されています。<br />
+	サイト全体(テーマ)で一元的に管理されているモジュールと干渉しあわないように、いくつかの規則が用意されています。<br />
 	コンテンツ独自のCSS、JavaScriptを定義する場合の規則 についても含みます。<br />
 </p>
 
@@ -147,6 +147,10 @@
 	<li>コンテンツが独自に定義するCSSクラスには、接頭辞 cont を付加しなければならない。</li>
 	<li>テーマが提供するCSSモジュールの一部を改変して使うことはできない。ただし、テーマが明示的に許可している場合は、その範囲で改変することができる。</li>
 </ul>
+
+<p>
+	テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマ管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。<br />
+</p>
 
 
 
@@ -202,12 +206,5 @@
 &lt;?php $px-&gt;theme()-&gt;send_content( ob_get_clean(), 'head' ); ?&gt;</code></pre></div>
 </div><!-- /.unit -->
 
-
-
-<h3>その他、禁止事項</h3>
-
-<ul>
-	<li>テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマ管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。</li>
-</ul>
 
 
