ドキュメントモジュール設計を整理。 - 文字サイズ系のモジュールは、端末によって効果が異なる場合が考えられるモジュールなので、スタティックからパーツへ移動した。 - レイアウト制御モジュール .inline, .block を追加。 - .current の説明に、a要素以外に適用する場合についての説明文を追加。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -36,6 +36,27 @@
 </div><!-- /.unit -->
 
 
+<h2>文字サイズ</h2>
+
+<div class="unit">
+<table class="def" style="width:100%;">
+	<thead>
+		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
+	</thead>
+	<tbody>
+		<tr><th>.xxlarge</th><td>文字を最大サイズにする。</td><td>&lt;p class=&quot;xxlarge&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.xlarge</th><td>文字をさらに大きいサイズにする。</td><td>&lt;p class=&quot;xlarge&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.large</th><td>文字を大きいサイズにする。</td><td>&lt;p class=&quot;large&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.medium</th><td>文字を標準サイズにする。</td><td>&lt;p class=&quot;medium&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.small</th><td>文字を小さいサイズにする。</td><td>&lt;p class=&quot;small&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.xsmall</th><td>文字をさらに小さいサイズにする。</td><td>&lt;p class=&quot;xsmall&quot;&gt;文字&lt;/p&gt;</td></tr>
+		<tr><th>.xxsmall</th><td>文字を最小サイズにする。</td><td>&lt;p class=&quot;xxsmall&quot;&gt;文字&lt;/p&gt;</td></tr>
+	</tbody>
+</table>
+</div><!-- /.unit -->
+
+
+
 <h2>リンク</h2>
 
 
@@ -424,18 +445,19 @@
 </div><!-- /.unit -->
 
 
-<h2>カレント制御</h2>
+<h2>カレント制御 .current</h2>
+
+<p>
+	カレントページを示す要素に適用します。通常は a要素 に対して適用しますが、場合によっては li要素などにも使用する場合にも、同じクラス名を使用します。<br />
+</p>
+
+<p><a href="***" class="current">カレントページ</a></p>
 
 <div class="unit">
-<table class="def" style="width:100%;">
-	<thead>
-		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
-	</thead>
-	<tbody>
-		<tr><th>.current</th><td>カレントページを示す要素に適用する。</td><td>&lt;a href=&quot;***&quot; class=&quot;current&quot;&gt;カレントページ&lt;/a&gt;</td></tr>
-	</tbody>
-</table>
+	<div class="code"><textarea readonly="readonly">&lt;a href=&quot;***&quot; class=&quot;current&quot;&gt;カレントページ&lt;/a&gt;
+</textarea></div>
 </div><!-- /.unit -->
+
 
 
 
