--- a/htdocs/_docs/modules/statics/index.html
+++ b/htdocs/_docs/modules/statics/index.html
@@ -5,27 +5,6 @@
 	print( $px->theme()->autoindex() );
 ?>
 
-<h2>文字サイズ</h2>
-
-<div class="unit">
-<table class="def" style="width:100%;">
-	<thead>
-		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
-	</thead>
-	<tbody>
-		<tr><th>.xxlarge</th><td>文字を最大サイズにする。</td><td>&lt;p class=&quot;xxlarge&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.xlarge</th><td>文字をさらに大きいサイズにする。</td><td>&lt;p class=&quot;xlarge&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.large</th><td>文字を大きいサイズにする。</td><td>&lt;p class=&quot;large&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.medium</th><td>文字を標準サイズにする。</td><td>&lt;p class=&quot;medium&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.small</th><td>文字を小さいサイズにする。</td><td>&lt;p class=&quot;small&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.xsmall</th><td>文字をさらに小さいサイズにする。</td><td>&lt;p class=&quot;xsmall&quot;&gt;文字&lt;/p&gt;</td></tr>
-		<tr><th>.xxsmall</th><td>文字を最小サイズにする。</td><td>&lt;p class=&quot;xxsmall&quot;&gt;文字&lt;/p&gt;</td></tr>
-	</tbody>
-</table>
-</div><!-- /.unit -->
-
-
-
 <h2>文字組み</h2>
 
 <div class="unit">
@@ -60,5 +39,21 @@
 	</tbody>
 </table>
 </div><!-- /.unit -->
+
+
+<h2>レイアウト制御</h2>
+
+<div class="unit">
+<table class="def" style="width:100%;">
+	<thead>
+		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
+	</thead>
+	<tbody>
+		<tr><th>.inline</th><td>インライン要素にする。</td><td>&lt;div class=&quot;inline&quot;&gt;インライン要素にする。&lt;/div&gt;</td></tr>
+		<tr><th>.block</th><td>ブロック要素にする。</td><td>&lt;span class=&quot;block&quot;&gt;ブロック要素にする。&lt;/span&gt;</td></tr>
+	</tbody>
+</table>
+</div><!-- /.unit -->
+
 
 
