ドキュメントモジュール設計を整理。 - .mt1hemなどの 1h(1half) を 1p5(1point5) に変更。 - フォームパーツに "ボタン" を追加。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -588,9 +588,16 @@
 				</select>
 			</td>
 		</tr>
+		<tr>
+			<th>ボタン</th>
+			<td>
+				<button onclick="alert('ボタンをクリックしました。');return false;">ボタン</button>
+			</td>
+		</tr>
 	</tbody>
 </table>
 </div><!-- /.unit -->
+
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;table class=&quot;form_elements&quot;&gt;
 	&lt;thead&gt;
@@ -679,6 +686,12 @@
 					&lt;option value=&quot;&quot;&gt;選択肢2&lt;/option&gt;
 					&lt;option value=&quot;&quot;&gt;選択肢3&lt;/option&gt;
 				&lt;/select&gt;
+			&lt;/td&gt;
+		&lt;/tr&gt;
+		&lt;tr&gt;
+			&lt;th&gt;ボタン&lt;/th&gt;
+			&lt;td&gt;
+				&lt;button onclick=&quot;alert('ボタンをクリックしました。');return false;&quot;&gt;ボタン&lt;/button&gt;
 			&lt;/td&gt;
 		&lt;/tr&gt;
 	&lt;/tbody&gt;
