PX=api.hash を追加。ほか - api.hash は、PxFWの管理下にあるファイルとMD5ハッシュの一覧をCSVに出力する。サポートの効率化を目的として追加した機能。 - PXコマンド画面のフッターメニューで、clearcacheとphpinfoは別窓リンクするようにした。 - PX=rdb で、テーブル一覧表示、SELECT文発行、行数取得の操作をリンククリックで実行できるようにした。

--- a/htdocs/_docs/pxcommand_list/index.html
+++ b/htdocs/_docs/pxcommand_list/index.html
@@ -56,6 +56,9 @@
 		<dd>サイトマップ配列全体を返す。</dd>
 	<dt>api.get.sitemap_definition</dt>
 		<dd>サイトマップ定義を返す。</dd>
+
+	<dt>api.hash</dt>
+		<dd>フレームワーク管理下のすべてのファイルやディレクトリと、そのハッシュ値の一覧を出力する。text/csv の出力のみ。</dd>
 </dl>
 
 <p>
