--- a/htdocs/_docs/test/index.html
+++ b/htdocs/_docs/test/index.html
@@ -1,4 +1,9 @@
 
+<p>
+	このディレクトリに含まれるファイルは、Pickles Framework の開発に使用したテスト用のページです。サイトの制作始めるに当たり、削除してください。<br />
+</p>
+
+
 
 <p>test/index.html のHTMLソースコードです。</p>
 <ul>
