--- a/htdocs/_docs/pxcommand_list/index.html
+++ b/htdocs/_docs/pxcommand_list/index.html
@@ -1,4 +1,11 @@
 
+
+<p>
+	PX Commands は、パラメータ PX を付加することで呼び出すことができる管理機能群です。<br />
+	キャッシュのクリア(PX=clearcache)やパブリッシュ(PX=publish)の他、制作を効率的に進められる便利な機能にアクセスすることができます。<br />
+</p>
+
+<h2>利用可能なPXコマンド一覧</h2>
 <ul>
 <?php
 	$filelist = $px->dbh()->ls( $px->get_conf('paths.px_dir').'_FW/pxcommands');
@@ -11,7 +18,12 @@
 
 
 
-<h2>PX=api</h2>
+<h2>PX=api の詳細</h2>
+
+<p>
+	PX=api は、外部のツール等から Pickles Framework 内のファイルを操作することを主な目的として設計されました。<br />
+	次に示すので、PX=api が持つ機能の一覧です。<br />
+</p>
 
 <dl>
 	<dt>api.dlfile.config</dt>
