--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -38,18 +38,18 @@
 
 </div><!-- /#content -->
 <?php
-	$page_prev = $px->site()->get_bros_prev();
+	$page_bros_prev = $px->site()->get_bros_prev();
 	$page_parent = $px->site()->get_parent();
-	$page_next = $px->site()->get_bros_next();
-	if($page_parent!==false || $page_next!==false || $page_prev!==false){
+	$page_bros_next = $px->site()->get_bros_next();
+	if($page_parent!==false || $page_bros_next!==false || $page_bros_prev!==false){
 		print '<div class="unit pager">'."\n";
 		print '	<ul>'."\n";
-		if($page_prev!==false){
-			print '<li class="pager-prev">'.$px->theme()->mk_link($page_prev,array('label'=>'<前へ')).'</li>'."\n";
+		if($page_bros_prev!==false){
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_bros_prev,array('label'=>'<前へ')).'</li>'."\n";
 		}
 		print '		<li class="pager-prev"></li>'."\n";
-		if($page_next!==false){
-			print '<li class="pager-prev">'.$px->theme()->mk_link($page_next,array('label'=>'次へ>')).'</li>'."\n";
+		if($page_bros_next!==false){
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_bros_next,array('label'=>'次へ>')).'</li>'."\n";
 		}
 		print '	</ul>'."\n";
 		print '</div><!-- /.pager -->'."\n";
@@ -89,18 +89,48 @@
 </div><!-- /.theme_localnavi -->
 
 <?php
-	$page_prev = $px->site()->get_bros_prev();
+	$page_bros_next = $px->site()->get_bros_next();
 	$page_parent = $px->site()->get_parent();
-	$page_next = $px->site()->get_bros_next();
-	if($page_parent!==false || $page_next!==false || $page_prev!==false){
+	$page_bros_prev = $px->site()->get_bros_prev();
+	if($page_parent!==false || $page_bros_next!==false || $page_bros_prev!==false){
+		print '<div class="unit pager">'."\n";
+		print '	<ul>'."\n";
+		if($page_bros_prev!==false){
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_bros_prev,array('label'=>'<前兄弟')).'</li>'."\n";
+		}
+		print '		<li class="pager-prev"></li>'."\n";
+		if($page_bros_next!==false){
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_bros_next,array('label'=>'次兄弟>')).'</li>'."\n";
+		}
+		print '	</ul>'."\n";
+		print '</div><!-- /.pager -->'."\n";
+
+		print '<div>'."\n";
+		print '<ul class="nomark">'."\n";
+		if($page_bros_prev!==false){
+			print '<li class="nomark-li">前：'.$px->theme()->mk_link($page_bros_prev).'</li>'."\n";
+		}
+		if($page_parent!==false){
+			print '<li class="nomark-li">上：'.$px->theme()->mk_link($page_parent).'</li>'."\n";
+		}
+		if($page_bros_next!==false){
+			print '<li class="nomark-li">次：'.$px->theme()->mk_link($page_bros_next).'</li>'."\n";
+		}
+		print '</ul>'."\n";
+		print '</div>'."\n";
+	}
+
+	$page_next = $px->site()->get_next();
+	$page_prev = $px->site()->get_prev();
+	if($page_next!==false || $page_prev!==false){
 		print '<div class="unit pager">'."\n";
 		print '	<ul>'."\n";
 		if($page_prev!==false){
-			print '<li class="pager-prev">'.$px->theme()->mk_link($page_prev,array('label'=>'<前へ')).'</li>'."\n";
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_prev,array('label'=>'<前ページ')).'</li>'."\n";
 		}
 		print '		<li class="pager-prev"></li>'."\n";
 		if($page_next!==false){
-			print '<li class="pager-prev">'.$px->theme()->mk_link($page_next,array('label'=>'次へ>')).'</li>'."\n";
+			print '<li class="pager-prev">'.$px->theme()->mk_link($page_next,array('label'=>'次ページ>')).'</li>'."\n";
 		}
 		print '	</ul>'."\n";
 		print '</div><!-- /.pager -->'."\n";
@@ -109,9 +139,6 @@
 		print '<ul class="nomark">'."\n";
 		if($page_prev!==false){
 			print '<li class="nomark-li">前：'.$px->theme()->mk_link($page_prev).'</li>'."\n";
-		}
-		if($page_parent!==false){
-			print '<li class="nomark-li">上：'.$px->theme()->mk_link($page_parent).'</li>'."\n";
 		}
 		if($page_next!==false){
 			print '<li class="nomark-li">次：'.$px->theme()->mk_link($page_next).'</li>'."\n";
