パブリッシュ時に、環境によって /index.html しかパブリッシュされない場合がある不具合を修正。他。
- コーディング規則ドキュメント上の、スタティック、パーツ、ユニットの並び順を逆にした。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -37,15 +37,15 @@
 </p>
 
 
-<p>共通ドキュメントモジュールは、それぞれ<strong>スタティックモジュール</strong>、<strong>パーツモジュール</strong>、<strong>ユニットモジュール</strong>の3種類のグループに分類されます。</p>
+<p>共通ドキュメントモジュールは、それぞれ<strong>ユニットモジュール</strong>、<strong>パーツモジュール</strong>、<strong>スタティックモジュール</strong>の3種類のグループに分類されます。</p>
 
 <dl>
-	<dt><a href="./statics/">スタティックモジュール</a></dt>
-		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
-	<dt><a href="./parts/">パーツモジュール</a></dt>
-		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
 	<dt><a href="./units/">ユニットモジュール</a></dt>
 		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられたモジュールです。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
+	<dt><a href="./parts/">パーツモジュール</a></dt>
+		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
+	<dt><a href="./statics/">スタティックモジュール</a></dt>
+		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
 </dl>
 
 
