--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -39,7 +39,7 @@
 	Pickles Framework のドキュメントを参照するには、次のページを参照してください。コーディング規則やCSSモジュール定義などが含まれています。<br />
 </p>
 <ul>
-	<li><a href="./_docs/">Pickles Framework ドキュメント</a></li>
+	<li><a href="./_docs/modules/">Pickles Framework ドキュメント</a></li>
 </ul>
 
 
